force-app/main/default/objects/Sale_Transaction__c/Sale_Transaction__c.object-meta.xml
<CustomObject>
    <description>Custom object to track asset sales as part of a restructuring transaction.</description>
    <label>Sale Transaction</label>
    <nameField>
        <label>Asset Sold</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sale Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>