force-app/main/default/objects/Sale_Transaction__c/fields/Break_Up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Break_Up_Fee__c</fullName>
    <label>Break Up Fee (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>