force-app/main/default/objects/Sale_Transaction__c/fields/Cash_Component__c.field-meta.xml
<CustomField>
    <fullName>Cash_Component__c</fullName>
    <label>Cash Component (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>