force-app/main/default/objects/Sale_Transaction__c/fields/Claim_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Claim_Conversion__c</fullName>
    <label>Claim Conversion (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>