force-app/main/default/objects/Sale_Transaction__c/fields/Date_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sale__c</fullName>
    <label>Date of Sale</label>
    <type>Date</type>
</CustomField>