force-app/main/default/objects/Sale_Transaction__c/fields/Incremental_Overbid__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Overbid__c</fullName>
    <label>Incremental Overbid (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>