force-app/main/default/objects/Sale_Transaction__c/fields/Liability_Assumed__c.field-meta.xml
<CustomField>
    <fullName>Liability_Assumed__c</fullName>
    <label>Liability Assumed (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>