force-app/main/default/objects/Sale_Transaction__c/fields/Stock_Component__c.field-meta.xml
<CustomField>
    <fullName>Stock_Component__c</fullName>
    <label>Stock Component (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>