force-app/main/default/objects/Sale_Transaction__c/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <formula>BLANKVALUE(Cash_Component__c,0) + BlANKVALUE(Stock_Component__c,0) + BLANKVALUE(Liability_Assumed__c,0) + BLANKVALUE(Claim_Conversion__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Price (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>